--- a/vasca/vasca_cfg.yaml
+++ b/vasca/vasca_cfg.yaml
@@ -3,11 +3,11 @@ authors : "UC science"
 comment : "Example configuration file"
 
 general:
-    name            : "CAINGSGII_10-800"                              # TDS_ELAISN1 # "WD"   "MDIS_10-800" "CAINGSGII_10-800"
+    name            : "ALL_10-800"                              # TDS_ELAISN1 # "WD"   "MDIS_10-800" "CAINGSGII_10-800"
     out_dir_base    : "./examples/vasca_pipeline"        # If "CWD" current work directory will be used.
     log_level       : "INFO"                            # ["NONE", "DEBUG", "INFO", "WARNING", "ERROR", "CRITICAL"]
     log_file        : "default"                          # Will be written into "out_dir", if ""default" a default name will be created 
-    nr_cpus         : 10                                  # Number of CPUs to use. If "null" all available are used.
+    nr_cpus         : 20                                  # Number of CPUs to use. If "null" all available are used.
     save_ref_srcs   : true                               # Store referenze sources into region file
     run_fields      : true                             # If fields have already been clusered and saved and should be resused set to "false". Otherwise the default is true
     
@@ -26,7 +26,7 @@ cluster_src:
         bin_seeding   : false
         min_bin_freq  : 1
         cluster_all   : true
-        n_jobs        : 10
+        n_jobs        : 20
         max_iter      : 300
         table_name    : "tt_sources"
 
@@ -37,8 +37,8 @@ cluster_coadd_dets:
         bin_seeding   : false
         min_bin_freq  : 1
         cluster_all   : true
-        n_jobs        : 10
-        max_iter      : 300
+        n_jobs        : 20
+        max_iter      : 100
         table_name    : "tt_coadd_detections"
 
 assoc_src_coadd:
@@ -121,7 +121,8 @@ observations:
       #obs_field_ids : !include field_ids.yaml
       #obs_field_ids : !include ./examples/resources/GALEX_field_id_lists/field_ids_TDS.yaml
       #obs_field_ids : !include ./examples/resources/GALEX_field_id_lists/field_ids_MISDIS_exp800_vis10_nuv_use.yaml #_ids_WD.yaml 
-      obs_field_ids : !include ./examples/resources/GALEX_field_id_lists/field_ids_CAINGSGII_exp800_vis10_nuv_use.yaml
+      #obs_field_ids : !include ./examples/resources/GALEX_field_id_lists/field_ids_CAINGSGII_exp800_vis10_nuv_use.yaml
+      obs_field_ids : !include ./examples/resources/GALEX_field_id_lists/field_ids_ALL_exp800_vis10_nuv_use.yaml
 
     - observatory   : "GALEX"
       obs_filter    : "FUV"
@@ -174,7 +175,8 @@ observations:
       #obs_field_ids : !include ./field_ids.yaml
       #obs_field_ids : !include ./examples/resources/GALEX_field_id_lists/field_ids_TDS.yaml
       #obs_field_ids : !include ./examples/resources/GALEX_field_id_lists/field_ids_MISDIS_exp800_vis10_fuv_use.yaml # _ids_WD.yaml
-      obs_field_ids : !include ./examples/resources/GALEX_field_id_lists/field_ids_CAINGSGII_exp800_vis10_fuv_use.yaml
+      #obs_field_ids : !include ./examples/resources/GALEX_field_id_lists/field_ids_CAINGSGII_exp800_vis10_fuv_use.yaml
+      obs_field_ids : !include ./examples/resources/GALEX_field_id_lists/field_ids_ALL_exp800_vis10_fuv_use.yaml
 
 # GALEX artifact flags
 # ( 1): edge; Detector bevel edge reflection (NUV only).
