--- a/vasca/vasca_cfg.yaml
+++ b/vasca/vasca_cfg.yaml
@@ -3,16 +3,16 @@ authors : "UC science"
 comment : "Example configuration file"
 
 general:
-    name            : "ALL_10-800" #"TDS_ELAISN1" #""TDS_ELAISN1" # "ALL_10-800"                              # TDS_ELAISN1 # "WD"   "MDIS_10-800" "CAINGSGII_10-800"
+    name            : "ALL_10-800_LOOSE" #"TDS_ELAISN1"#  #""TDS_ELAISN1" # "ALL_10-800"
     out_dir_base    : "./examples/vasca_pipeline"        # If "CWD" current work directory will be used.
-    log_level       : "DEBUG"                            # ["NONE", "DEBUG", "INFO", "WARNING", "ERROR", "CRITICAL"]
+    log_level       : "INFO"                            # ["NONE", "DEBUG", "INFO", "WARNING", "ERROR", "CRITICAL"]
     log_file        : "default"                          # Will be written into "out_dir", if ""default" a default name will be created 
-    nr_cpus         : 8                                  # Number of CPUs to use. If "null" all available are used.
-    save_ref_srcs   : true                               # Store referenze sources into region file
-    run_fields      : true                             # If fields have already been clusered and saved and should be resused set to "false". Otherwise the default is true
+    nr_cpus         : 18                                  # Number of CPUs to use. If "null" all available are used.
+    save_ref_srcs   : true                               # Store reference sources into region file
+    run_fields      : false                             # If fields have already been clustered and saved and should be reused set to "false". Otherwise the default is true
     
 resources:                      
-    load_method      : "MAST_LOCAL"                   # Allowed are ["MAST_REMOTE", "MAST_LOCAL", "VASCA", "AUTO"]
+    load_method      : "VASCA"                   # Allowed are ["MAST_REMOTE", "MAST_LOCAL", "VASCA", "AUTO"]
     load_products    :  "TABLES"                           # Data products from MAST:  "NONE", "TABLES" for tables and reference image, "ALL" for tables and visit images
     coadd_exists     : true                           # Coadd detection catalogs are available (co-added images may exist). If false, sections 'cluster_coadd_dets', 'selection/src_coadd_diff' and 'observations/<observatory>/coadd_det_quality' are unused
     field_kwargs:
@@ -90,9 +90,9 @@ observations:
               sel_type    : "and"
               # See variable description http://www.galex.caltech.edu/wiki/Public:Documentation/Appendix_A.1
               range:
-                  s2n            : [4, .inf]
+                  s2n            : [3, .inf]
                   r_fov          : [0.0, 0.5]
-                  ellip_world    : [0.0, 0.3]
+                  ellip_world    : [0.0, 0.5]
                   size_world     : [0.0, 6.0]
                   class_star     : [0.15, 1.0]        # Extension classifier (extended=0, point like=1)
                   chkobj_type    : [-0.5,0.5]       # Matched to a bright star (0=no, 1=yes)
@@ -115,7 +115,7 @@ observations:
               presel_type : "and"
               sel_type : "and"  # These are all AND selections
               range:
-                  s2n            : [5,.inf]
+                  s2n            : [4,.inf]
                   r_fov          : [0.0,0.5]
                   ellip_world    : [0.0, 0.3]
                   size_world     : [0.0, 6.0]
@@ -153,9 +153,9 @@ observations:
               sel_type    : "and"
               # See variable description http://www.galex.caltech.edu/wiki/Public:Documentation/Appendix_A.1
               range:
-                  s2n            : [4, .inf]
+                  s2n            : [3, .inf]
                   r_fov          : [0.0, 0.5]
-                  ellip_world    : [0.0, 0.3]
+                  ellip_world    : [0.0, 0.5]
                   size_world     : [0.0, 6.0]
                   class_star     : [0.15, 1.0]        # Extension classifier (extended=0, point like=1)
                   chkobj_type    : [-0.5,0.5]       # Matched to a bright star (0=no, 1=yes)
@@ -178,7 +178,7 @@ observations:
               presel_type : "and"
               sel_type : "and"  # These are all AND selections
               range:
-                  s2n            : [5,.inf]
+                  s2n            : [4,.inf]
                   r_fov          : [0.0,0.5]
                   ellip_world    : [0.0, 0.3]
                   size_world     : [0.0, 6.0]
