--- a/vasca/vasca_cfg_TDS.yaml
+++ b/vasca/vasca_cfg_TDS.yaml
@@ -128,7 +128,7 @@ observations:
                   artifacts :  [2,4,8,128,256] #[] ,8,16,32,64,128,256,512
               
       #obs_field_ids : !include field_ids.yaml
-      #obs_field_ids : !include ./examples/resources/GALEX_field_id_lists/field_ids_TDS_ELAISN1.yaml
+      obs_field_ids : !include ./examples/resources/GALEX_field_id_lists/field_ids_TDS.yaml
       #obs_field_ids : !include ./examples/resources/GALEX_field_id_lists/field_ids_MISDIS_exp800_vis10_nuv_use.yaml #_ids_WD.yaml 
       #obs_field_ids : !include ./examples/resources/GALEX_field_id_lists/field_ids_CAINGSGII_exp800_vis10_nuv_use.yaml
       #obs_field_ids : !include ./examples/resources/GALEX_field_id_lists/field_ids_ALL_exp800_vis10_nuv_use.yaml
