--- a/vasca/vasca_cfg_TDS.yaml
+++ b/vasca/vasca_cfg_TDS.yaml
@@ -192,9 +192,10 @@ observations:
              
       #obs_field_ids : !include ./field_ids.yaml
       #obs_field_ids : !include ./examples/resources/GALEX_field_id_lists/field_ids_TDS_ELAISN1.yaml
+      obs_field_ids : !include ./examples/resources/GALEX_field_id_lists/field_ids_TDS.yaml
       #obs_field_ids : !include ./examples/resources/GALEX_field_id_lists/field_ids_MISDIS_exp800_vis10_fuv_use.yaml # _ids_WD.yaml
       #obs_field_ids : !include ./examples/resources/GALEX_field_id_lists/field_ids_CAINGSGII_exp800_vis10_fuv_use.yaml
-      obs_field_ids : !include ./examples/resources/GALEX_field_id_lists/field_ids_ALL_exp800_vis10_fuv_use.yaml
+      #obs_field_ids : !include ./examples/resources/GALEX_field_id_lists/field_ids_ALL_exp800_vis10_fuv_use.yaml
 
 # GALEX artifact flags
 # ( 1): edge; Detector bevel edge reflection (NUV only).
