--- a/vasca/vasca_cfg.yaml
+++ b/vasca/vasca_cfg.yaml
@@ -3,7 +3,7 @@ authors : "UC science"
 comment : "Example configuration file"
 
 general:
-    name            : "TDS_ELAISN1"#"ALL_10-800_LOOSE" #  #""TDS_ELAISN1" # "ALL_10-800"
+    name            : "ALL_10-800_LOOSE" #"TDS_ELAISN1"#"ALL_10-800_LOOSE" #  #""TDS_ELAISN1" # "ALL_10-800"
     out_dir_base    : "./examples/vasca_pipeline"        # If "CWD" current work directory will be used.
     log_level       : "DEBUG"                            # ["NONE", "DEBUG", "INFO", "WARNING", "ERROR", "CRITICAL"]
     log_file        : "default"                          # Will be written into "out_dir", if ""default" a default name will be created 
@@ -115,23 +115,20 @@ observations:
               presel_type : "and"
               sel_type : "and"  # These are all AND selections
               range:
-                  s2n            : [4,.inf]
-                  r_fov          : [0.0,0.55]
-                  ellip_world    : [0.0, 0.3]
+                  s2n            : [5, .inf]
+                  r_fov          : [0.0, 0.55]
+                  ellip_world    : [0.0, 0.5]
                   size_world     : [0.0, 6.0]
                   class_star     : [0.15, 1.0]        # Extension classifier (extended=0, point like=1)
                   chkobj_type    : [-0.5,0.5]       # Matched to a bright star (0=no, 1=yes)
                   flux_app_ratio : [0.3,1.05]       #
               bitmask:
-                # Specify the artifacts to remove
-                # For GALEX a description is at the end of this document
+                  # Specify the artifacts to remove
+                  # For GALEX a description is at the end of this document
                   artifacts :  [2,4,8,128,256] #[] ,8,16,32,64,128,256,512
-              
-      obs_field_ids : !include field_ids.yaml
+
       #obs_field_ids : !include ./examples/resources/GALEX_field_id_lists/field_ids_TDS_ELAISN1.yaml
-      #obs_field_ids : !include ./examples/resources/GALEX_field_id_lists/field_ids_MISDIS_exp800_vis10_nuv_use.yaml #_ids_WD.yaml 
-      #obs_field_ids : !include ./examples/resources/GALEX_field_id_lists/field_ids_CAINGSGII_exp800_vis10_nuv_use.yaml
-      #obs_field_ids : !include ./examples/resources/GALEX_field_id_lists/field_ids_ALL_exp800_vis10_nuv_use.yaml
+      obs_field_ids : !include ./examples/resources/GALEX_field_id_lists/field_ids_ALL_exp800_vis10_nuv_use.yaml
 
     - observatory   : "GALEX"
       obs_filter    : "FUV"
@@ -178,23 +175,20 @@ observations:
               presel_type : "and"
               sel_type : "and"  # These are all AND selections
               range:
-                  s2n            : [4,.inf]
-                  r_fov          : [0.0,0.55]
-                  ellip_world    : [0.0, 0.3]
+                  s2n            : [5, .inf]
+                  r_fov          : [0.0, 0.55]
+                  ellip_world    : [0.0, 0.5]
                   size_world     : [0.0, 6.0]
                   class_star     : [0.15, 1.0]        # Extension classifier (extended=0, point like=1)
                   chkobj_type    : [-0.5,0.5]       # Matched to a bright star (0=no, 1=yes)
                   flux_app_ratio : [0.3,1.05]       #
               bitmask:
-                # Specify the artifacts to remove
-                # For GALEX a description is at the end of this document
+                  # Specify the artifacts to remove
+                  # For GALEX a description is at the end of this document
                   artifacts :  [2,4,8,128,256] #[] ,8,16,32,64,128,256,512
-             
-      obs_field_ids : !include ./field_ids.yaml
+
       #obs_field_ids : !include ./examples/resources/GALEX_field_id_lists/field_ids_TDS_ELAISN1.yaml
-      #obs_field_ids : !include ./examples/resources/GALEX_field_id_lists/field_ids_MISDIS_exp800_vis10_fuv_use.yaml # _ids_WD.yaml
-      #obs_field_ids : !include ./examples/resources/GALEX_field_id_lists/field_ids_CAINGSGII_exp800_vis10_fuv_use.yaml
-      #obs_field_ids : !include ./examples/resources/GALEX_field_id_lists/field_ids_ALL_exp800_vis10_fuv_use.yaml
+      obs_field_ids : !include ./examples/resources/GALEX_field_id_lists/field_ids_ALL_exp800_vis10_fuv_use.yaml
 
 # GALEX artifact flags
 # ( 1): edge; Detector bevel edge reflection (NUV only).
